--- a/app/src/main/res/layout/activity_detail_story.xml
+++ b/app/src/main/res/layout/activity_detail_story.xml
@@ -16,7 +16,7 @@
         <ImageView
             android:id="@+id/iv_detail_photo"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_height="410dp"
             android:transitionName="shared_image"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -32,6 +32,7 @@
             android:layout_marginEnd="20dp"
             android:padding="3dp"
             android:textSize="23sp"
+            android:textColor="@color/black"
             android:textStyle="bold"
             android:transitionName="shared_name"
             app:layout_constraintEnd_toEndOf="parent"
@@ -46,6 +47,7 @@
             android:textSize="16sp"
             android:layout_marginStart="25dp"
             android:layout_marginEnd="25dp"
+            android:textColor="@color/black"
             android:textAlignment="viewStart"
             app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
             app:layout_constraintStart_toStartOf="parent"
