--- a/app/src/main/res/layout/activity_adapter.xml
+++ b/app/src/main/res/layout/activity_adapter.xml
@@ -41,6 +41,7 @@
             android:layout_marginStart="16dp"
             android:textSize="22sp"
             android:textStyle="bold"
+            android:textColor="@color/black"
             android:transitionName="shared_name"
             tools:text="@string/judul"/>
         <TextView
