--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -25,13 +25,14 @@
         android:text="@string/desc_daftar"
         android:textSize="30sp"
         android:textStyle="bold"
+        android:textColor="@color/black"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_logo" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/ed_register_name"
+        android:id="@+id/ed_signup_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -39,13 +40,16 @@
         android:layout_marginStart="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:minHeight="56dp"
         app:layout_constraintTop_toBottomOf="@id/tv_title_signup">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/ed_name"
+        <com.zaqly.storyapp.customview.Username
+            android:id="@+id/ed_nama"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/nama" />
+            android:hint="@string/nama"
+            android:textColor="@color/black"
+            android:paddingVertical="48dp"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -57,14 +61,16 @@
         android:layout_marginStart="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ed_register_name">
+        app:layout_constraintTop_toBottomOf="@id/ed_signup_name"
+        android:minHeight="56dp">
 
         <com.zaqly.storyapp.customview.Email
             android:id="@+id/ed_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/email"
-            android:inputType="textEmailAddress" />
+            android:textColor="@color/black"
+            android:inputType="textEmailAddress"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -77,14 +83,17 @@
         app:endIconMode="password_toggle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ed_signup_email">
+        app:layout_constraintTop_toBottomOf="@id/ed_signup_email"
+        android:minHeight="56dp">
 
         <com.zaqly.storyapp.customview.Password
             android:id="@+id/ed_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/passsword"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:textColor="@color/black"
+            android:padding="16dp"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
@@ -108,6 +117,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
